--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🎉 New Year Fireworks</title>
+    <title>New Year Fireworks 🎉</title>
+    <link rel="icon" type="image/x-icon" href="./assets/santa.png" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="text-container">
+      <h1>Ho Ho Ho!</h1>
+      <p>Click on the avatar to pick your hero</p>
+    </div>
+    <img id="avatar" src="./assets/santa.png" alt="avatar" />
     <canvas id="canvas-background"></canvas>
-    <canvas id="fireworks"></canvas>
+    <canvas id="canvas-fireworks"></canvas>
 
+    <script src="avatar-toggle.js"></script>
     <script src="canvas-background.js"></script>
-    <script src="fireworks.js"></script>
+    <script src="canvas-fireworks.js"></script>
   </body>
 </html>
