--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <h1>Ho Ho Ho!</h1>
       <p>Click on the avatar to pick your hero</p>
     </div>
-    <img id="avatar" src="./assets/santa.png" alt="avatar" />
+    <div class="image-container">
+      <img id="avatar" src="./assets/santa.png" alt="avatar" />
+    </div>
     <canvas id="canvas-background"></canvas>
     <canvas id="canvas-fireworks"></canvas>
 
